// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Bucket/Toolbar/Get should render with custom label 1`] = `
<div
  className="makeStyles-root-1"
>
  <button>
    Custom Get Label
  </button>
  <div
    aria-hidden={true}
    className="MuiBackdrop-root makeStyles-backdrop-3"
    onClick={[Function]}
    style={
      {
        "opacity": 0,
        "visibility": "hidden",
      }
    }
  />
</div>
`;

exports[`containers/Bucket/Toolbar/Get should render with default label 1`] = `
<div
  className="makeStyles-root-1"
>
  <button
    className="custom-class"
  >
    Get files
  </button>
  <div
    aria-hidden={true}
    className="MuiBackdrop-root makeStyles-backdrop-3"
    onClick={[Function]}
    style={
      {
        "opacity": 0,
        "visibility": "hidden",
      }
    }
  />
</div>
`;
